// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`legacy golden baseline > LED primary digital wire (default layout) 1`] = `
{
  "path": "M 130 150 L 130 182 Q 130 190 138 190 L 290 190 L 294 192 L 317 192",
  "segmentCount": 1,
  "teardropCount": 2,
  "viaCount": 0,
  "width": 2,
}
`;

exports[`legacy golden baseline > OLED I2C SCL wire (default layout) 1`] = `
{
  "path": "M 580 195 L 580 222 Q 580 230 572 230 L 518 230 Q 510 230 510 222 L 510 200 Q 510 192 502 192 L 487 192",
  "segmentCount": 1,
  "teardropCount": 2,
  "viaCount": 0,
  "width": 1.5,
}
`;

exports[`legacy golden baseline > OLED I2C SDA wire (default layout) 1`] = `
{
  "path": "M 570 195 L 570 168 Q 570 160 562 160 L 510 160 L 506 162 L 487 162",
  "segmentCount": 1,
  "teardropCount": 2,
  "viaCount": 0,
  "width": 1.5,
}
`;
